--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 	"main": "./tobii.d.ts",
 	"types": "./tobii.d.ts",
 	"devDependencies": {
+		"@commitlint/cli": "^19.3.0",
+		"@commitlint/config-conventional": "^19.2.2",
+		"husky": "^9.0.11",
 		"prettier": "^3.2.5",
 		"typescript": ">=5.4.2"
 	}
